css/main.css
@font-face {
    font-family: "harry_potter";
    src: url(../fonts/harry_potter.ttf) format("truetype");
}
@font-face {
    font-family: "harry_potter_7";
    src: url(../fonts/harry_potter_7.ttf) format("truetype");
}
@font-face {
    font-family: "lumos";
    src: url(../fonts/lumos.ttf) format("truetype");
}
@font-face {
    font-family: "overlock";
    src: url(../fonts/overlock.ttf) format("truetype");
}
@font-face {
    font-family: "veteran_typewriter";
    src: url(../fonts/veteran_typewriter.ttf) format("truetype");
}

/* General */
.hide {
    display: none;
}

.clear {
    clear: both;
}

body {
    background-image: url(../img/background.png);
    background-size: 100%;
    background-attachment: fixed;
    font-family: "overlock";
}

/* Header */
#logo {
    width: 100%;
}

.contact-info {
    background-color: rgba(49, 29, 37, 0.8);
    color: #a07d4b;
    text-align: center;
}

.contact-info img {
    box-sizing: border-box;
    display: inline-block;
    width: calc(70% / 5);
    padding: 3%;
    margin: auto;
}

header div {
    display: inline-block;
    width: 49%;
    vertical-align: bottom;
}

header h1 {
    margin: 0;
    margin-bottom: 10%;
    font-size: 10.5vw;
    font-family: "veteran_typewriter";
    color: #e9ddd1;
}

/* Nav */
button {
    border: none;
    outline: none;
}

nav {
    padding: 5% 0%;
    text-align: center;
    background-color: rgba(35, 33, 33, 0.8);
}

nav ul {
    padding: 0;
    margin: 0;
}

nav ul li {
    padding: 3% 0;
    background-color: rgba(89, 99, 101, 0.8);
    width: 40%;
    margin: auto;
    margin-bottom: 5%;
    border-radius: 5px;
}

nav ul li:nth-child(odd) {
    -ms-transform: rotate(5deg);
    -webkit-transform: rotate(5deg);
    transform: rotate(5deg);
}

nav ul li:nth-child(1) {
    margin-top: 10px;
}

nav ul li a {
    color: #97a993;
    text-decoration: none;
}

/* Main Content (Location, Hours, History) */
.main-content {
    background-image: url('../img/paper.png');
    width: 80%;
    margin: auto;
    padding-top: 5%;
    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.6);
}

.main-content article {
    padding-bottom: 20%;
}

.main-content h3,
.main-content h2 {
    background-color: #97a993;
    font-family: "harry_potter";
    margin-left: -10%;
    padding: 3% 0% 1% 3%;
    color: #311d25;
    margin-bottom: 0;
}

.main-content p {
    padding: 5%;
}

.main-content a {
    text-decoration: none;
    color: #596365;
}

.history-index {
    display: none;
}

article.location {
    padding-bottom: 5%;
}

#map {
    height: 150px;
}

.location p:first-of-type {
    text-align: center;
    font-family: "harry_potter_7";
}

.hours {
    display: none;
}

.time {
    padding-bottom: 10%;

}

.time p {
    text-align: center;
    font-family: "harry_potter_7";
}

.overlock {
    color: #4b3131;
    font-size: 2em;
}

.closed {
    width: 80%;
    margin: auto;
    background-image: url('../img/closed.png');
    background-size: 100%;
    padding: 8% 0;
    color: #eadfd4;
    font-size: 1.3em;
    border-radius: 10px;
    -ms-transform: rotate(4deg);
    -webkit-transform: rotate(4deg);
    transform: rotate(4deg);
    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
}

/* Aside Content (Food Special, Drink Special, Gift Cards) */
aside {
    background-color: rgba(49, 29, 37, 0.7);
    width: 80%;
    margin: 5% auto;
    padding-top: 5%;
    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.6);
}

.decsription {
    background-color: rgba(234, 223, 211, 0.8);
    padding: 5%;
}

aside h3 {
    background-color: #a07d4b;
    text-align: right;
    font-family: "harry_potter";
    padding: 3% 4% 0% 3%;
    margin: auto;
    margin-right: -10%;
    color: #311d25;
}

aside article {
    padding-bottom: 10%;
}

aside article:last-of-type {
    padding-bottom: 0;
}

aside h4,
.promotions h4 {
    font-family: "harry_potter_7";
    text-align: center;
}

.source a {
    color: black;
    text-decoration: none;
    font-style: italic;
}

aside img {
    width: 100%;
    margin: 0;
}

/* Footer (Email Form) */
footer {
    background-color: #596365;
}

footer img {
    width: 30%;
    float: left;
    padding-top: 10%;
}

.footer-title {
    padding: 6%;
    color: #97a993;
    text-align: center;
    font-size: 0.9em;
    margin: 0;
    font-family: "harry_potter_7";
}

#mail_form {
    width: 70%;
    float: right;
    text-align: center;
}

input {
    display: block;
    margin: auto;
    margin-bottom: 2%;
    padding-left: 1%;
    width: 80%;
}

.submit {
    width: 50%;
    margin: 5% auto;
    padding: 4%;
    background-color: #97a993;
    border-radius: 5px;
    color: #596365;
    font-family: "harry_potter_7";
}

/* Location Page */
main.main-content.location-page {
    padding: 0;
    margin-top: 5%;
}

.location-page article {
    padding-bottom: 5%;
    margin-bottom: 15%;
}

.main-content h2 {
    margin: 0;
    text-align: center;
}

/* History Page */
section.main-content.history {
    padding: 0;
    margin-top: 5%;
}

.history article {
    padding-bottom: 3%;
}

.history article h2 {
    background-color: #311d25;
    color: #97a993;
}

.history-images {
    background-color: rgba(49, 29, 37, 0.7);
    width: 90%;
    margin: auto;
    margin-bottom: 10%;
    padding: 3% 0;
}

.history-images img {
    width: 90%;
    display: block;
    margin: 9% auto;
    box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.6);
}

.history-images img:first-of-type {
    -ms-transform: rotate(2deg);
    -webkit-transform: rotate(2deg);
    transform: rotate(2deg);
}

.history-images img:last-of-type {
    -ms-transform: rotate(-2deg);
    -webkit-transform: rotate(-2deg);
    transform: rotate(-2deg);
}

/* Promotions Page */
.promotions {
    width: 80%;
    margin: auto;
}

.promotions article {
    margin-bottom: 10%;
}

.promotions article:first-of-type {
    margin-top: 5%;
}

.promotions article img {
    width: 100%;
}

.promotions article h3 {
    background-color: #596365;
    text-align: center;
    font-family: "harry_potter";
    margin: 0;
    color: #97a993;
    padding: 5% 0 3% 0;
}

p.price {
    font-size: 2em;
    text-align: center;
    font-family: "harry_potter";
}

/* News Page */
.news section {
    background-color: rgba(35, 33, 33, 0.8);
    padding-bottom: 3%;
    margin-bottom: 5%;
}

.news h2 {
    text-align: center;
    font-family: "harry_potter";
    color: #97a993;
    margin-bottom: 0;
    padding: 5% 0 3% 0;
    background-color: #596365;
}

#news-ticker {
    background-color: #4b3131;
    padding: 10% 0;
    color: #a07d4b;
}

.news img {
    display: block;
    width: 70%;
    margin: auto;
    margin-bottom: 5%;
}

.news img:first-of-type {
    margin-top: 5%;
}

/* Menu Page */
.dropdown {
    position: relative;
}

.dropdown-content {
    display: none;
    position: relative;
    background-color: #f9f9f9;
    min-width: 160px;
}

.show-sub-menu {
    display: block;
}

.dropdown-description img {
    width: 80%;
}

.menu {
    text-align: center;
    background-color: #4b3131;
    color: #ece2d8;
}

.menu ul {
    list-style-type: none;
    padding: 0;
}

.menu ul li {
    padding: 5% 0;
    font-family: "harry_potter_7";
}

.dropdown-content li {
    padding: 0 0 5% 0;
    color: #596365;
    font-family: "harry_potter_7";
}

.dropdown-description {
    padding-bottom: 3%;
}

.dropdown-description p {
    color: #4b3131;
}

/* Media Queries Medium */
@media (min-width: 450px) {
    h3 {
        font-size: 1.8em;
    }
    article p,
    .footer-title {
        font-size: 1.2em;
    }
}

@media (min-width: 700px) {
    nav ul li:nth-child(1) {
        margin-top: 25px;
    }
    #map {
        height: 250px;
    }
    h3 {
        font-size: 2.8em;
    }
    article p,
    .footer-title {
        font-size: 2em;
    }
    .location h2,
    .history h2,
    .news h2 {
        font-size: 2.5em;
    }
    .dropdown li {
        font-size: 2em;
    }
    .dropdown-description p {
        font-size: 2em;
    }
    .promotions h4 {
        font-size: 2em;
    }
    p.price {
        font-size: 3em;
    }
    .news img {
        width: 60%;
    }
    footer img {
        padding-top: 3%;
    }
}

/* Media Queries Large */
@media (min-width: 900px) {
    .contact-info img {
        padding: 0%;
        width: 3%;
        margin: 1% 3%;
        display: inline-block;
    }
    .show {
        display: block;
    }
    button.hamburger {
        display: none;
    }
    div .header-links {
        display: absolute;
    }
    nav {
        padding: 0;
    }
    nav ul {
        padding-bottom: 2%;
    }
    nav ul li {
        width: 12%;
        display: inline-block;
        margin: 0 1%;
        padding: 2%;
    }
    nav ul li:nth-child(even) {
        -ms-transform: rotate(-5deg);
        -webkit-transform: rotate(-5deg);
        transform: rotate(-5deg);
    }
    nav ul li a {
        font-size: 1vw;
    }
    header div {
        width: 22%;
        margin-top: -5%;
    }
    header h1 {
        font-size: 5vw;
        margin-left: 5%;
        margin-top: 85%;
    }
}

@media (min-width: 1050px) {
    main {
        width: 80%;
        margin: auto;
    }
    .flex-wrap {
        width: 90%;
        display: flex;
        margin: auto;
        margin-bottom: 5%;
    }
    article.history-index {
        display: block;
        padding-bottom: 0;
    }
    .history-index h3 {
        margin-left: 0;
    }
    article.history-index p,
    .history article p, {
        font-size: 2.6em;
    }
    .location {
        width: 43%;
        float: left;
        margin-left: 3%;
    }
    .location h3 {
        margin-left: 0;
    }
    .time {
        width: 45%;
        float: right;
        margin-right: 4%;
    }
    .time h3 {
        text-align: right;
        margin-left: 3%;
        margin-right: -1%;
        padding-right: 6%;
    }
    aside,
    .history-images {
        width: 34%;
        flex: auto;
    }
    aside article h3 {
        margin: 0;
        text-align: center;
        margin-top: 1em;
    }
    aside article p {
        font-size: 1.9em;
    }
    #map {
        height: 400px;
        padding: 0;
    }
    .location-page p {
        text-align: center;
        padding: 2% 0;
        width: 60%;
        margin: auto;
        font-size: 2em;
    }
    .location-page p:first-of-type {
        margin-top: 5%;
        font-size: 2.3em;
    }
    .main-content,
    .history {
        width: 64%;
        flex: auto;
    }
    .history {
        margin: 0;
    }
    .history-images {
        margin: 5% auto;
        margin-top: 10%;
    }
    .promotions {
        margin: auto;
    }
    .news img,
    .promotions article {
        width: 30%;
        margin: 0 auto;
        flex: auto;
        padding: 0;
    }
    .news h2 {
        font-size: 3em;
        padding: 2% 0;
    }
    .promotions article:first-of-type {
        margin-top: 0;
    }
    .news img:first-of-type {
        margin-top: 0;
    }
    footer img {
        width: 18%;
        margin-left: 15%;
    }
    #mail_form {
        width: 50%;
        margin-right: 10%;
    }
    input {
        padding: 1%;
    }
}

@media (min-width: 2200px) {
    .main-content p {
        width: 80%;
        margin: auto;
        font-size: 2.4em;
    }
    section.promotions article p:last-of-type {
        font-size: 2.2em;
    }
}

